Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/V3d/V3dView.h

extern "C" DECL_EXPORT void V3d_View_FitAllC2777E0C(
	void* instance,
	double Umin,
	double Vmin,
	double Umax,
	double Vmax);
extern "C" DECL_EXPORT void V3d_View_WindowFit8C6D7843(
	void* instance,
	int Xmin,
	int Ymin,
	int Xmax,
	int Ymax);
extern "C" DECL_EXPORT void V3d_View_SetViewingVolumeBC7A5786(
	void* instance,
	double Left,
	double Right,
	double Bottom,
	double Top,
	double ZNear,
	double ZFar);
extern "C" DECL_EXPORT void V3d_View_SetViewMappingDefault(void* instance);
extern "C" DECL_EXPORT void V3d_View_ResetViewMapping(void* instance);
extern "C" DECL_EXPORT void V3d_View_Reset461FC46A(
	void* instance,
	bool update);
extern "C" DECL_EXPORT double V3d_View_ConvertE8219145(
	void* instance,
	int Vp);
extern "C" DECL_EXPORT void V3d_View_ConvertB83D31A8(
	void* instance,
	int Xp,
	int Yp,
	double* Xv,
	double* Yv);
extern "C" DECL_EXPORT int V3d_View_ConvertD82819F3(
	void* instance,
	double Vv);
extern "C" DECL_EXPORT void V3d_View_Convert852507E(
	void* instance,
	double Xv,
	double Yv,
	int* Xp,
	int* Yp);
extern "C" DECL_EXPORT void V3d_View_Convert636CFDD5(
	void* instance,
	int Xp,
	int Yp,
	double* X,
	double* Y,
	double* Z);
extern "C" DECL_EXPORT void V3d_View_ConvertWithProj67C254F0(
	void* instance,
	int Xp,
	int Yp,
	double* X,
	double* Y,
	double* Z,
	double* Vx,
	double* Vy,
	double* Vz);
extern "C" DECL_EXPORT void V3d_View_ConvertToGrid636CFDD5(
	void* instance,
	int Xp,
	int Yp,
	double* Xg,
	double* Yg,
	double* Zg);
extern "C" DECL_EXPORT void V3d_View_ConvertToGridBC7A5786(
	void* instance,
	double X,
	double Y,
	double Z,
	double* Xg,
	double* Yg,
	double* Zg);
extern "C" DECL_EXPORT void V3d_View_Convert94A49759(
	void* instance,
	double X,
	double Y,
	double Z,
	int* Xp,
	int* Yp);
extern "C" DECL_EXPORT void V3d_View_Project216AF150(
	void* instance,
	double X,
	double Y,
	double Z,
	double* Xp,
	double* Yp);
extern "C" DECL_EXPORT void V3d_View_BackgroundColor638950E1(
	void* instance,
	int Type,
	double* V1,
	double* V2,
	double* V3);
extern "C" DECL_EXPORT void* V3d_View_BackgroundColor(void* instance);
extern "C" DECL_EXPORT void V3d_View_GradientBackgroundColorsCF0F9433(
	void* instance,
	void* Color1,
	void* Color2);
extern "C" DECL_EXPORT void V3d_View_AxialScale9282A951(
	void* instance,
	double* Sx,
	double* Sy,
	double* Sz);
extern "C" DECL_EXPORT void V3d_View_Center9F0E714F(
	void* instance,
	double* Xc,
	double* Yc);
extern "C" DECL_EXPORT void V3d_View_Size9F0E714F(
	void* instance,
	double* Width,
	double* Height);
extern "C" DECL_EXPORT void V3d_View_Eye9282A951(
	void* instance,
	double* X,
	double* Y,
	double* Z);
extern "C" DECL_EXPORT void V3d_View_FocalReferencePoint9282A951(
	void* instance,
	double* X,
	double* Y,
	double* Z);
extern "C" DECL_EXPORT void V3d_View_ProjReferenceAxe67C254F0(
	void* instance,
	int Xpix,
	int Ypix,
	double* XP,
	double* YP,
	double* ZP,
	double* VX,
	double* VY,
	double* VZ);
extern "C" DECL_EXPORT void V3d_View_Proj9282A951(
	void* instance,
	double* Vx,
	double* Vy,
	double* Vz);
extern "C" DECL_EXPORT void V3d_View_At9282A951(
	void* instance,
	double* X,
	double* Y,
	double* Z);
extern "C" DECL_EXPORT void V3d_View_Up9282A951(
	void* instance,
	double* Vx,
	double* Vy,
	double* Vz);
extern "C" DECL_EXPORT bool V3d_View_ZCueing9F0E714F(
	void* instance,
	double* Depth,
	double* Width);
extern "C" DECL_EXPORT int V3d_View_ZClipping9F0E714F(
	void* instance,
	double* Depth,
	double* Width);
extern "C" DECL_EXPORT void V3d_View_InitActiveLights(void* instance);
extern "C" DECL_EXPORT void V3d_View_NextActiveLights(void* instance);
extern "C" DECL_EXPORT void V3d_View_InitActivePlanes(void* instance);
extern "C" DECL_EXPORT void V3d_View_NextActivePlanes(void* instance);
extern "C" DECL_EXPORT void* V3d_View_Window(void* instance);
extern "C" DECL_EXPORT void V3d_View_Pan83917674(
	void* instance,
	int Dx,
	int Dy,
	double aZoomFactor);
extern "C" DECL_EXPORT void V3d_View_Zoom8C6D7843(
	void* instance,
	int X1,
	int Y1,
	int X2,
	int Y2);
extern "C" DECL_EXPORT void V3d_View_Zoom5107F6FE(
	void* instance,
	int X,
	int Y);
extern "C" DECL_EXPORT void V3d_View_StartZoomAtPoint5107F6FE(
	void* instance,
	int xpix,
	int ypix);
extern "C" DECL_EXPORT void V3d_View_ZoomAtPoint8C6D7843(
	void* instance,
	int mouseStartX,
	int mouseStartY,
	int mouseEndX,
	int mouseEndY);
extern "C" DECL_EXPORT void V3d_View_AxialScaleB5EB7D2C(
	void* instance,
	int Dx,
	int Dy,
	int Axis);
extern "C" DECL_EXPORT void V3d_View_StartRotation83917674(
	void* instance,
	int X,
	int Y,
	double zRotationThreshold);
extern "C" DECL_EXPORT void V3d_View_Rotation5107F6FE(
	void* instance,
	int X,
	int Y);
extern "C" DECL_EXPORT bool V3d_View_TransientManagerBeginDrawAE8C3818(
	void* instance,
	bool DoubleBuffer,
	bool RetainMode);
extern "C" DECL_EXPORT void V3d_View_TransientManagerClearDraw(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetAnimationModeOn(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetAnimationModeOff(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetDegenerateModeOn(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetDegenerateModeOff(void* instance);
extern "C" DECL_EXPORT void V3d_View_WindowFitAll8C6D7843(
	void* instance,
	int Xmin,
	int Ymin,
	int Xmax,
	int Ymax);
extern "C" DECL_EXPORT void V3d_View_Plot(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetGridA01EB949(
	void* instance,
	void* aPlane,
	void* aGrid);
extern "C" DECL_EXPORT double V3d_View_Tumble898DAFFC(
	void* instance,
	int NbImages,
	bool AnimationMode);
extern "C" DECL_EXPORT bool V3d_View_Print4B7FA157(
	void* instance,
	void* hPrnDC,
	bool showDialog,
	bool showBackground,
	char* filename,
	int printAlgorithm);
extern "C" DECL_EXPORT void V3d_View_EnableDepthTest461FC46A(
	void* instance,
	bool enable);
extern "C" DECL_EXPORT void V3d_View_EnableGLLight461FC46A(
	void* instance,
	bool enable);
extern "C" DECL_EXPORT bool V3d_View_IsEmpty(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetZClippingDepth(void* instance, double value);
extern "C" DECL_EXPORT void V3d_View_SetZClippingWidth(void* instance, double value);
extern "C" DECL_EXPORT void V3d_View_SetZClippingType(void* instance, int value);
extern "C" DECL_EXPORT void V3d_View_SetZCueingDepth(void* instance, double value);
extern "C" DECL_EXPORT void V3d_View_SetZCueingWidth(void* instance, double value);
extern "C" DECL_EXPORT void V3d_View_SetLayerMgr(void* instance, void* value);
extern "C" DECL_EXPORT bool V3d_View_ColorScaleIsDisplayed(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetScale(void* instance, double value);
extern "C" DECL_EXPORT double V3d_View_Scale(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetZSize(void* instance, double value);
extern "C" DECL_EXPORT double V3d_View_ZSize(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetDepth(void* instance, double value);
extern "C" DECL_EXPORT double V3d_View_Depth(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetTwist(void* instance, double value);
extern "C" DECL_EXPORT double V3d_View_Twist(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetShadingModel(void* instance, int value);
extern "C" DECL_EXPORT int V3d_View_ShadingModel(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetSurfaceDetail(void* instance, int value);
extern "C" DECL_EXPORT int V3d_View_SurfaceDetail(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetTransparency(void* instance, bool value);
extern "C" DECL_EXPORT bool V3d_View_Transparency(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetVisualization(void* instance, int value);
extern "C" DECL_EXPORT int V3d_View_Visualization(void* instance);
extern "C" DECL_EXPORT bool V3d_View_Antialiasing(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IfMoreLights(void* instance);
extern "C" DECL_EXPORT bool V3d_View_MoreActiveLights(void* instance);
extern "C" DECL_EXPORT void* V3d_View_ActiveLight(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IfMorePlanes(void* instance);
extern "C" DECL_EXPORT bool V3d_View_MoreActivePlanes(void* instance);
extern "C" DECL_EXPORT void* V3d_View_ActivePlane(void* instance);
extern "C" DECL_EXPORT void* V3d_View_Viewer(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IfWindow(void* instance);
extern "C" DECL_EXPORT int V3d_View_Type(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetFocale(void* instance, double value);
extern "C" DECL_EXPORT double V3d_View_Focale(void* instance);
extern "C" DECL_EXPORT void* V3d_View_View(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetViewMapping(void* instance, void* value);
extern "C" DECL_EXPORT void* V3d_View_ViewMapping(void* instance);