Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/V3d/V3dView.cs

		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_FitAllC2777E0C(IntPtr instance, double Umin,double Vmin,double Umax,double Vmax);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_WindowFit8C6D7843(IntPtr instance, int Xmin,int Ymin,int Xmax,int Ymax);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetViewingVolumeBC7A5786(IntPtr instance, double Left,double Right,double Bottom,double Top,double ZNear,double ZFar);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetViewMappingDefault(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ResetViewMapping(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Reset461FC46A(IntPtr instance, bool update);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_View_ConvertE8219145(IntPtr instance, int Vp);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ConvertB83D31A8(IntPtr instance, int Xp,int Yp,ref double Xv,ref double Yv);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_ConvertD82819F3(IntPtr instance, double Vv);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Convert852507E(IntPtr instance, double Xv,double Yv,ref int Xp,ref int Yp);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Convert636CFDD5(IntPtr instance, int Xp,int Yp,ref double X,ref double Y,ref double Z);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ConvertWithProj67C254F0(IntPtr instance, int Xp,int Yp,ref double X,ref double Y,ref double Z,ref double Vx,ref double Vy,ref double Vz);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ConvertToGrid636CFDD5(IntPtr instance, int Xp,int Yp,ref double Xg,ref double Yg,ref double Zg);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ConvertToGridBC7A5786(IntPtr instance, double X,double Y,double Z,ref double Xg,ref double Yg,ref double Zg);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Convert94A49759(IntPtr instance, double X,double Y,double Z,ref int Xp,ref int Yp);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Project216AF150(IntPtr instance, double X,double Y,double Z,ref double Xp,ref double Yp);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_BackgroundColor638950E1(IntPtr instance, int Type,ref double V1,ref double V2,ref double V3);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_BackgroundColor(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_GradientBackgroundColorsCF0F9433(IntPtr instance, IntPtr Color1,IntPtr Color2);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_AxialScale9282A951(IntPtr instance, ref double Sx,ref double Sy,ref double Sz);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Center9F0E714F(IntPtr instance, ref double Xc,ref double Yc);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Size9F0E714F(IntPtr instance, ref double Width,ref double Height);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Eye9282A951(IntPtr instance, ref double X,ref double Y,ref double Z);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_FocalReferencePoint9282A951(IntPtr instance, ref double X,ref double Y,ref double Z);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ProjReferenceAxe67C254F0(IntPtr instance, int Xpix,int Ypix,ref double XP,ref double YP,ref double ZP,ref double VX,ref double VY,ref double VZ);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Proj9282A951(IntPtr instance, ref double Vx,ref double Vy,ref double Vz);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_At9282A951(IntPtr instance, ref double X,ref double Y,ref double Z);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Up9282A951(IntPtr instance, ref double Vx,ref double Vy,ref double Vz);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_ZCueing9F0E714F(IntPtr instance, ref double Depth,ref double Width);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_ZClipping9F0E714F(IntPtr instance, ref double Depth,ref double Width);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_InitActiveLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_NextActiveLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_InitActivePlanes(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_NextActivePlanes(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_Window(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Pan83917674(IntPtr instance, int Dx,int Dy,double aZoomFactor);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Zoom8C6D7843(IntPtr instance, int X1,int Y1,int X2,int Y2);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Zoom5107F6FE(IntPtr instance, int X,int Y);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_StartZoomAtPoint5107F6FE(IntPtr instance, int xpix,int ypix);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_ZoomAtPoint8C6D7843(IntPtr instance, int mouseStartX,int mouseStartY,int mouseEndX,int mouseEndY);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_AxialScaleB5EB7D2C(IntPtr instance, int Dx,int Dy,int Axis);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_StartRotation83917674(IntPtr instance, int X,int Y,double zRotationThreshold);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Rotation5107F6FE(IntPtr instance, int X,int Y);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_TransientManagerBeginDrawAE8C3818(IntPtr instance, bool DoubleBuffer,bool RetainMode);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_TransientManagerClearDraw(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetAnimationModeOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetAnimationModeOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetDegenerateModeOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetDegenerateModeOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_WindowFitAll8C6D7843(IntPtr instance, int Xmin,int Ymin,int Xmax,int Ymax);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_Plot(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetGridA01EB949(IntPtr instance, IntPtr aPlane,IntPtr aGrid);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_View_Tumble898DAFFC(IntPtr instance, int NbImages,bool AnimationMode);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_Print4B7FA157(IntPtr instance, IntPtr hPrnDC,bool showDialog,bool showBackground,string filename,int printAlgorithm);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_EnableDepthTest461FC46A(IntPtr instance, bool enable);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_EnableGLLight461FC46A(IntPtr instance, bool enable);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IsEmpty(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZClippingDepth(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZClippingWidth(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZClippingType(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZCueingDepth(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZCueingWidth(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetLayerMgr(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_ColorScaleIsDisplayed(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetScale(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_View_Scale(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetZSize(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_View_ZSize(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetDepth(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_View_Depth(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetTwist(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_View_Twist(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetShadingModel(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_ShadingModel(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetSurfaceDetail(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_SurfaceDetail(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetTransparency(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_Transparency(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetVisualization(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_Visualization(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_Antialiasing(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IfMoreLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_MoreActiveLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_ActiveLight(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IfMorePlanes(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_MoreActivePlanes(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_ActivePlane(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_Viewer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IfWindow(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_Type(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetFocale(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_View_Focale(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_View(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetViewMapping(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_ViewMapping(IntPtr instance);
